--- a/views/index.html
+++ b/views/index.html
@@ -13,5 +13,9 @@
     </form>
 
     <a href="/about" class="href">About page</a>
+
+    <hr>
+
+    <a href="/api/users">API (get users)</a>
 </body>
 </html>
